test_suite/tests/ui/precondition/serialize_variant_identifier.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
#[serde(variant_identifier)]
enum F {
    A,
    B,
}

fn main() {}
